--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     "BotKey": "T9tAClX7",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
-    "autobio": true,
+    "autobio": false,
     "anticall": true,
     "autorespond": false,
     "autoblok212": true,
