--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "footer": "GXOBot-Mdོ By XgtibXcybོ",
     "sessionName": "session",
     "pathimg": "./media/Xgtib.jpg",
-    "BotKey": "T9tAClX7",
+    "BotKey": "hB8KKEb9",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
     "autobio": false,
